--- a/Ruper.API/Ruper.API.csproj
+++ b/Ruper.API/Ruper.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Ruper.BLL\Ruper.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
