added identity, jwt, usersController

--- a/Ruper.API/Ruper.API.csproj
+++ b/Ruper.API/Ruper.API.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Ruper.AuthenticationService\Ruper.AuthenticationService.csproj" />
     <ProjectReference Include="..\Ruper.BLL\Ruper.BLL.csproj" />
   </ItemGroup>
 
