--- a/Ruper.API/appsettings.json
+++ b/Ruper.API/appsettings.json
@@ -1,5 +1,11 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-2620URA;Database=RuperDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInMinutes": 60
   }
 }
