--- a/Ruper.API/appsettings.json
+++ b/Ruper.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-2620URA;Database=RuperDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-MSKQP80\\SQLEXPRESS01;Database=RuperDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JWT": {
     "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
